--- a/Maven/src/main/resources/config.properties
+++ b/Maven/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 suffix=_new
-fileHelp=data/help.txt
-fileSetting=data/setting.txt
-fileInfo=data/info.txt
+directory=data
+fileHelp=help.txt
+fileSetting=setting.txt
+fileInfo=info.txt
