task "Maven" has been done

--- a/Maven/src/main/resources/config.properties
+++ b/Maven/src/main/resources/config.properties
@@ -1,6 +1,3 @@
 suffix=_new
 directory=data
-fileList=help.txt;setting.txt;info.txt
-fileHelp=help.txt
-fileSetting=setting.txt
-fileInfo=info.txt
+filesList=help.txt;setting.txt;info.txt
