--- a/XMLandJSON/pom.xml
+++ b/XMLandJSON/pom.xml
@@ -14,6 +14,13 @@
             <version>1.2.12</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.12.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
