--- a/WebBasicsREST/src/main/resources/application.properties
+++ b/WebBasicsREST/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=VK_07121630_vk
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
 
+spring.mvc.throw-exception-if-no-handler-found=true
