--- a/WebBasicsREST/pom.xml
+++ b/WebBasicsREST/pom.xml
@@ -16,6 +16,8 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<mysql.version>8.0.27</mysql.version>
+		<log4j.version>1.2.17</log4j.version>
 	</properties>
 
 	<dependencies>
@@ -45,7 +47,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.27</version>
+			<version>${mysql.version}</version>
 		</dependency>
 
 		<dependency>
@@ -63,7 +65,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>${log4j.version}</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
